why where there two CSS files to begin with?

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,11 @@
 p:not(:has(> strong)) {
     @apply indent-4;
 }
+
+tr {
+    @apply even:bg-gray-300 w-full;
+}
+
+th {
+    @apply capitalize;
+}
