we are heading towards bright future right here (react app updates) also some source corrections

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ td {
 }
 
 .btn {
-    @apply text-blue-700 dark:text-blue-500 underline capitalize inline;
+    @apply text-blue-700 dark:text-blue-500 underline inline;
 }
 
 .nav-btn {
